Bug 508383 - EXE file thumbnail not shown in 25.08 update
Summary: EXE file thumbnail not shown in 25.08 update
Status: RESOLVED FIXED
Alias: None
Product: kio-extras
Classification: Frameworks and Libraries
Component: Thumbnails and previews (other bugs)
Version First Reported In: 25.08.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-08-17 14:10 UTC by Erwin Iosef
Modified: 2025-10-16 08:22 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
KAIN exe(is safe) (822.50 KB, application/octet-stream)
2025-08-17 14:10 UTC, Erwin Iosef
Details
Kain exe after libkexiv update (8.52 KB, image/png)
2025-08-17 14:11 UTC, Erwin Iosef
Details
Kain exe before update (12.58 KB, image/png)
2025-08-17 14:22 UTC, Erwin Iosef
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Erwin Iosef 2025-08-17 14:10:00 UTC
Created attachment 184182 [details]
KAIN exe(is safe)

After I updated to 25.08 the attached exe showed up as a regular file, with no thumbnail, reverting to 25.03 fixed it. The attachment is the exe file for the game Legacy of Kain: Blood Omen.
Comment 1 Erwin Iosef 2025-08-17 14:11:48 UTC
Created attachment 184183 [details]
Kain exe after libkexiv update
Comment 2 Erwin Iosef 2025-08-17 14:22:40 UTC
Created attachment 184184 [details]
Kain exe before update
Comment 3 Erwin Iosef 2025-08-17 14:26:32 UTC
On further investigation this seems to be rooted in kio-extras 25.08, moving to appropriate component
Comment 4 Kai Uwe Broulik 2025-08-17 14:34:47 UTC
Can confirm, wrestool is able to extract the icon but the thumbnailer doesn’t show it.

Previously, the exe thumbnailer called wrestool to do it but now we parse the executable ourself. Probably a bug in there.
Comment 5 Erwin Iosef 2025-08-17 14:42:24 UTC
I see, thanks for replying! Hope it's an easy fix.
Comment 6 Erwin Iosef 2025-08-17 14:44:27 UTC
It should be noted that I only saw this issue in this one particular exe only, others showed fine on the view , is Dolphin also supposed to show the thumbnail when doing right-click-> properties on an exe?
Comment 7 Kai Uwe Broulik 2025-08-17 15:07:18 UTC
https://invent.kde.org/network/kio-extras/-/merge_requests/462 Tentative fix
Comment 8 Erwin Iosef 2025-08-18 03:42:48 UTC
Thank you!
Comment 9 Méven 2025-10-16 08:22:42 UTC
Git commit 088a429599f37a9bf189ae5b6d5a4a0ff349361b by Méven Car, on behalf of Kai Uwe Broulik.
Committed on 16/10/2025 at 07:42.
Pushed by meven into branch 'master'.

exeutils: Handle virtual size of zero

It is zero for non-executable sections.

M  +5    -1    thumbnail/exeutils.cpp

https://invent.kde.org/network/kio-extras/-/commit/088a429599f37a9bf189ae5b6d5a4a0ff349361b