exeutils: Handle virtual size of zero

It is zero for non-executable sections.

BUG: 508383